// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core picture direct upload should fail should refuse a logo whose content is not an image 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "BAD_REQUEST",
    "userFriendlyMessage": "This file format is not supported.",
  },
  "message": "MIME type application/pdf is not allowed in file folder core-picture",
  "name": "UserInputError",
}
`;

exports[`Core picture direct upload should fail should refuse to bind a completed profile picture as the workspace logo 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "BAD_REQUEST",
    "userFriendlyMessage": "This file upload has already been finalized.",
  },
  "message": "File <fileId> is not awaiting an upload confirmation",
  "name": "UserInputError",
}
`;

exports[`Core picture direct upload should fail should refuse to bind a file reserved outside the core picture folder 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "FILE_NOT_FOUND",
    "userFriendlyMessage": "File not found.",
  },
  "message": "File not found: <fileId>",
  "name": "NotFoundError",
}
`;

exports[`Core picture direct upload should fail should refuse to bind a logo whose bytes were never uploaded 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "FILE_NOT_UPLOADED",
    "userFriendlyMessage": "The file has not been uploaded yet. Please upload it before confirming.",
  },
  "message": "File "core-picture/<fileId>.png" has not been uploaded to storage yet.",
  "name": "UserInputError",
}
`;

exports[`Core picture direct upload should fail should refuse to complete an unknown file 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "FILE_NOT_FOUND",
    "userFriendlyMessage": "File not found.",
  },
  "message": "File not found: <fileId>",
  "name": "NotFoundError",
}
`;

exports[`Core picture direct upload should fail should refuse to reserve a picture larger than the core picture size limit 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "FILE_TOO_LARGE",
    "userFriendlyMessage": "The file is empty or exceeds the maximum allowed size.",
  },
  "message": "Invalid file size 10485761 (max 10485760 bytes)",
  "name": "UserInputError",
}
`;
